# cdd-docs

./: .env.example  .gitignore  LICENSE  README.md  lessons_learned.md  pyproject.toml
docs/: c1-system-context.md  c2-container.md  c3-component.md  c4-code.md
docs/features/: agent-module.md
eval_cases/: c4_cases.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: chat.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  MarkdownRenderer.tsx
frontend/src/hooks/: useChat.ts
frontend/src/styles/: chat.css
old-docs/: agent_module_cases.json  config-module.md  config_module_cases.json  tui-wizard.md  tui_wizard_cases.json
src/cdd_docs/: __init__.py  config.py
src/cdd_docs/api/: __init__.py  main.py  models.py  session.py
src/cdd_docs/api/routes/: chat.py
src/cdd_docs/core/: __init__.py  chunker.py  embeddings.py  mermaid.py  rag.py  vectorstore.py
src/cdd_docs/eval/: __init__.py  api.py  evaluator.py  models.py
src/cdd_docs/scripts/: __init__.py  evaluate.py  index.py  serve.py
src/cdd_docs/ui/: __init__.py  app.py
tests/: __init__.py  test_chunker.py
